<resources>
    <string name="app_name">ContactsApp</string>
    <string name="internet_connectivity_fail">No Internet Connection…</string>
    <string name="internet_connectivity_success">Back Online!</string>
    <string name="menu_search">Search</string>
    <string name="empty_field">Please do not leave this field blank.</string>
    <string name="contact_deleted">Contact deleted.</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="okay">Okay</string>
    <string name="comment">Comment</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="delete_contact_title">Delete Contact</string>
    <string name="delete_contact_description">Are you sure you want to delete this contact?</string>
    <string name="add_contact">Add Contact</string>
    <string name="contact_added">Contact added.</string>
    <string name="id">Contact ID</string>
    <string name="number">Number</string>
    <string name="company">Company</string>
    <string name="department">Department</string>
    <string name="email">Email</string>
    <string name="name_surname">%1$s %2$s</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
</resources>