<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/grey">

    <com.cagataykolus.contactsapp.utils.view.RoundedButton
        android:id="@+id/button_dialog_contact_okay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:padding="12dp"
        android:text="@string/okay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textinputlayout_dialog_contact_email" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textinputlayout_dialog_contact_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textinputedittext_dialog_contact_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/number"
            android:inputType="text"
            android:textAlignment="viewStart"
            android:textColor="@color/black80"
            tools:text="2168483" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textinputlayout_dialog_contact_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textinputlayout_dialog_contact_number">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textinputedittext_dialog_contact_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/name"
            android:inputType="text"
            android:textAlignment="viewStart"
            android:textColor="@color/black80"
            tools:text="John" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textinputlayout_dialog_contact_surname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textinputlayout_dialog_contact_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textinputedittext_dialog_contact_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/surname"
            android:inputType="text"
            android:textAlignment="viewStart"
            android:textColor="@color/black80"
            tools:text="Doe" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textinputlayout_dialog_contact_company"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textinputlayout_dialog_contact_surname">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textinputedittext_dialog_contact_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/company"
            android:inputType="text"
            android:textAlignment="viewStart"
            android:textColor="@color/black80"
            tools:text="XYZ Group" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textinputlayout_dialog_contact_department"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textinputlayout_dialog_contact_company">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textinputedittext_dialog_contact_department"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/department"
            android:inputType="text"
            android:textAlignment="viewStart"
            android:textColor="@color/black80"
            tools:text="Technology" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textinputlayout_dialog_contact_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textinputlayout_dialog_contact_department">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textinputedittext_dialog_contact_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/email"
            android:inputType="text"
            android:textAlignment="viewStart"
            android:textColor="@color/black80"
            tools:text="johndoe1010@gmail.com" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>