<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageview_detail_photo"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_user"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textview_detail_name_surname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/montserrat_bold"
        android:textColor="@color/black80"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageview_detail_photo"
        tools:text="John Doe" />

    <TextView
        android:id="@+id/textview_detail_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/montserrat_semibold"
        android:textColor="@color/black60"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_detail_name_surname"
        tools:text="XYZ Group" />

    <TextView
        android:id="@+id/textview_detail_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/montserrat_semibold"
        android:textColor="@color/black80"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageview_detail_icon_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageview_detail_icon_1"
        app:layout_constraintTop_toBottomOf="@+id/textview_detail_label_1"
        tools:text="70173" />

    <TextView
        android:id="@+id/textview_detail_department"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/montserrat_semibold"
        android:textColor="@color/black80"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageview_detail_icon_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageview_detail_icon_2"
        app:layout_constraintTop_toBottomOf="@+id/textview_detail_label_2"
        tools:text="Computers" />

    <TextView
        android:id="@+id/textview_detail_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/montserrat_semibold"
        android:textColor="@color/black80"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageview_detail_icon_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageview_detail_icon_3"
        app:layout_constraintTop_toBottomOf="@+id/textview_detail_label_3"
        tools:text="johndoe0101@gmail.com" />

    <ImageView
        android:id="@+id/imageview_detail_icon_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_detail_company"
        app:srcCompat="@drawable/ic_cellphone"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageview_detail_icon_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageview_detail_icon_1"
        app:srcCompat="@drawable/ic_domain"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageview_detail_icon_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageview_detail_icon_2"
        app:srcCompat="@drawable/ic_email"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textview_detail_label_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/number"
        android:textSize="11sp"
        app:layout_constraintBottom_toTopOf="@+id/imageview_detail_icon_1"
        app:layout_constraintStart_toEndOf="@+id/imageview_detail_icon_1"
        app:layout_constraintTop_toTopOf="@+id/imageview_detail_icon_1" />

    <TextView
        android:id="@+id/textview_detail_label_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/department"
        android:textSize="11sp"
        app:layout_constraintBottom_toTopOf="@+id/imageview_detail_icon_2"
        app:layout_constraintStart_toEndOf="@+id/imageview_detail_icon_2"
        app:layout_constraintTop_toTopOf="@+id/imageview_detail_icon_2" />

    <TextView
        android:id="@+id/textview_detail_label_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/email"
        android:textSize="11sp"
        app:layout_constraintBottom_toTopOf="@+id/imageview_detail_icon_3"
        app:layout_constraintStart_toEndOf="@+id/imageview_detail_icon_3"
        app:layout_constraintTop_toTopOf="@+id/imageview_detail_icon_3" />

    <com.cagataykolus.contactsapp.utils.view.RoundedButton
        android:id="@+id/button_detail_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_detail_delete"
        app:layout_constraintTop_toBottomOf="@+id/textview_detail_email" />

    <com.cagataykolus.contactsapp.utils.view.RoundedOutlinedButton
        android:id="@+id/button_detail_delete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/delete"
        app:layout_constraintEnd_toStartOf="@+id/button_detail_edit"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_detail_email" />

    <ProgressBar
        android:id="@+id/progressbar_detail_loading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>